--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 # Configuration file
 # key = value
 
-quarkus.native.additional-build-args = -H:IncludeResources=images/.*
+#quarkus.native.additional-build-args = -H:IncludeResources=image.png
+quarkus.native.additional-build-args = -H:ResourceConfigurationFiles=resources-config.json, -H:+PrintAnalysisCallTree, -H:Log=registerResource:verbose
+#quarkus.native.resources.includes=Resource2.txt,images/*.png
