add_files_to_docker_image

--- a/src/main/resources/resources-config.json
+++ b/src/main/resources/resources-config.json
@@ -1,12 +1,10 @@
 {
-	"resources": {
-		"includes": [
-			{
-				"pattern": "IMG_3_3M\\.jpg$"
-			},
-			{
-				"pattern": "Resources2\\.txt$"
-			}
-		]
-	}
+	"resources": [
+		{
+			"pattern": "Resource2.txt"
+		},
+		{
+			"pattern": "IMG_3_3M.jpg"
+		}
+	]
 }
