--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,1 @@
-# Configuration file
-# key = value
-
-#quarkus.native.additional-build-args = -H:IncludeResources=image.png
-quarkus.native.additional-build-args = -H:ResourceConfigurationFiles=resources-config.json, -H:+PrintAnalysisCallTree, -H:Log=registerResource:verbose
-#quarkus.native.resources.includes=Resource2.txt,images/*.png
+%dev.images.location=src/main/resources/images/
