--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -18,7 +18,7 @@ FROM registry.access.redhat.com/ubi8/ubi-minimal:8.1
 WORKDIR /work/
 COPY target/*-runner /work/application
 COPY target/*-runner /work/applicationBackup
-COPY target/classes/images/IMG_3_3M.jpg /work/IMG_3_3M.jpg
+COPY target/classes/images/*.jpg /work/images/
 
 # set up permissions for user `1001`
 RUN chmod 775 /work /work/application \
@@ -28,5 +28,5 @@ RUN chmod 775 /work /work/application \
 
 USER 1001
 
-CMD ["./application", "-Dquarkus.http.host=0.0.0.0", "-Dquarkus.http.port=${PORT}", "-Dimages.location=/work/"]
+CMD ["./application", "-Dquarkus.http.host=0.0.0.0", "-Dquarkus.http.port=${PORT}"]
 
